# FORGE

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  visualise_fk_csv.py  visualiser.py
differentialEvolution/: main.cpp
example_dh_parameters/: fanuc_m20ia.yaml  kawasaki_bx200l.yaml  kawasaki_bx200l_restricted_3dof.yaml  kuka_youbot.yaml  tm5_700.yaml
example_environments/: constaints.json
experiments/: Makefile  algorithm_bindings.cpp  analyser.py  csv_analyser.py  gradient_descent_analyser.py  loaders.py  metaheuristic_analyser.py
experiments/statistics/: analysis.txt
geneticAlgorithm/: main.cpp
gradientDescent/: gradientDescent.h  main.cpp
metaheuristics/: differentialEvolution.h  geneticAlgorithm.h  particleSwarmOptimization.h  socialGroupOptimization.h  teachingLearningBasedOptimization.h
metaheuristics/differentialEvolution/: main.cpp
metaheuristics/geneticAlgorithm/: main.cpp
metaheuristics/particleSwarmOptimization/: main.cpp
metaheuristics/socialGroupOptimization/: main.cpp
metaheuristics/teachingLearningBasedOptimization/: main.cpp
particleSwarmOptimization/: main.cpp
scene_designer/: Designer.py  Makefile  collision_bindings.cpp  collision_utils.py  designer_bindings.cpp  example_scene.json
socialGroupOptimization/: main.cpp
src/: collision_utils.h  debug_utils.h  io_utils.h  nearest_neighbor_util.h  nearest_neighbor_utils.h  random_utils.h  robomath_utils.h  src.h  types.h
teachingLearningBasedOptimization/: main.cpp
